--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.14'
+      - name: Set PATH
+        run: echo "PATH=$PATH:$GOPATH/bin" >> $GITHUB_ENV
       - name: Setup
         run: make setup
       - name: Build
