--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup
         run: make setup
       - name: Build
-        run: make
+        run: make all
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
